objects/Account.object
<CustomObject>
    <fields>
        <fullName>ED_PHY_Group__c</fullName>
        <description>TESTING ED REPORT FOR KYLE.  REMOVE ONCE COMPLETED</description>
        <label>DNU ED_PHY_GROUP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360 Degree Medicine, MO</fullName>
                </value>
                <value>
                    <fullName>4M Emergency Systems, Inc., OH</fullName>
                </value>
                <value>
                    <fullName>Abington Emergency Physician Associates</fullName>
                </value>
                <value>
                    <fullName>Absaroka Emergency Physicians, MT</fullName>
                </value>
                <value>
                    <fullName>Acute Care, Inc., IA</fullName>
                </value>
                <value>
                    <fullName>Acute Care Medical Group, CA</fullName>
                </value>
                <value>
                    <fullName>Acute Medical Providers, CA</fullName>
                </value>
                <value>
                    <fullName>Advanced Care Emergency Services, AZ</fullName>
                </value>
                <value>
                    <fullName>Advocate Medical Group, IL</fullName>
                </value>
                <value>
                    <fullName>Affinity Physicians, RI</fullName>
                </value>
                <value>
                    <fullName>Alamo City Medical Group</fullName>
                </value>
                <value>
                    <fullName>Alaska Emergency Medicine Associates, AK</fullName>
                </value>
                <value>
                    <fullName>Albany Emergency Physicians</fullName>
                </value>
                <value>
                    <fullName>Alegent Creighton University Medical Center, NE</fullName>
                </value>
                <value>
                    <fullName>Align MD, TN</fullName>
                </value>
                <value>
                    <fullName>All Children's Specialty Physicians</fullName>
                </value>
                <value>
                    <fullName>Allegheny Health Network, PA</fullName>
                </value>
                <value>
                    <fullName>Alliance Medical Associates, Inc., OH</fullName>
                </value>
                <value>
                    <fullName>Allied Emergency Physicians, CA</fullName>
                </value>
                <value>
                    <fullName>Allied Emergency Services, MS</fullName>
                </value>
                <value>
                    <fullName>Altamont Emergency Physicians, CA</fullName>
                </value>
                <value>
                    <fullName>Amarillo Emergency Physicians, TX</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Care Emergency Physicians, MA</fullName>
                </value>
                <value>
                    <fullName>Anaheim Emergency Care Specialists , CA</fullName>
                </value>
                <value>
                    <fullName>Antelope Valley Emergency Medical Associates, CA</fullName>
                </value>
                <value>
                    <fullName>APEX Emergency Group, PC, CO</fullName>
                </value>
                <value>
                    <fullName>Apexx Physician Medical Group</fullName>
                </value>
                <value>
                    <fullName>Apollo MD, GA</fullName>
                </value>
                <value>
                    <fullName>Appleton Emergency Services</fullName>
                </value>
                <value>
                    <fullName>Arizona Emergency Medicine Specialists, AZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ED_Physician_Group_Text__c</fullName>
        <inlineHelpText>Free form - type in the name of the Physician Group, if known</inlineHelpText>
        <label>DNU ED Physician Group (DNU)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Physician_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup - click the magnifying glass to search for and select the Physician Group</inlineHelpText>
        <label>ED Physician Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Hospitals (ED Group)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ED_Profee_C__c</fullName>
        <label>ED Profee Coding Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Profee_Coding_Billing_Managed_By__c</fullName>
        <label>ED Profee Coding/Billing Managed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Not Coding/Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ED_Staffing_Company__c</fullName>
        <label>ED Staffing Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4M Emergency Systems, Inc.</fullName>
                </value>
                <value>
                    <fullName>Acute Care, Inc.</fullName>
                </value>
                <value>
                    <fullName>ApolloMD</fullName>
                </value>
                <value>
                    <fullName>Best Practices, Inc.</fullName>
                </value>
                <value>
                    <fullName>CEP America</fullName>
                </value>
                <value>
                    <fullName>Cornerstone Physicians Mgmt. Group</fullName>
                </value>
                <value>
                    <fullName>ECI Healthcare Partners, Inc.</fullName>
                </value>
                <value>
                    <fullName>EmCare</fullName>
                </value>
                <value>
                    <fullName>Emergency Medical Associates (EMA)</fullName>
                </value>
                <value>
                    <fullName>Emergency Medicine Consultants, Ltd.</fullName>
                </value>
                <value>
                    <fullName>Emergency Medicine Physicians (EMP)</fullName>
                </value>
                <value>
                    <fullName>Emergency Practice Associates (EPA) of IA</fullName>
                </value>
                <value>
                    <fullName>Emergency Resource Mgmt Inc. (ERMI)</fullName>
                </value>
                <value>
                    <fullName>Emergency Service Partners (ESP)</fullName>
                </value>
                <value>
                    <fullName>Emergency Staffing Solutions (ESS)</fullName>
                </value>
                <value>
                    <fullName>EPIC of Utah</fullName>
                </value>
                <value>
                    <fullName>EPMG</fullName>
                </value>
                <value>
                    <fullName>HospitalMD</fullName>
                </value>
                <value>
                    <fullName>Hospital Physician Partners (HPP)</fullName>
                </value>
                <value>
                    <fullName>Infinity HealthCare</fullName>
                </value>
                <value>
                    <fullName>MESA Medical Group</fullName>
                </value>
                <value>
                    <fullName>Midwest Emergency Associates</fullName>
                </value>
                <value>
                    <fullName>Midwest Emergency Department Services</fullName>
                </value>
                <value>
                    <fullName>Midwest Emergency Physicians (MEP)</fullName>
                </value>
                <value>
                    <fullName>NES HealthCare Group</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pegasus Emergency Group</fullName>
                </value>
                <value>
                    <fullName>Phoenix Physicians, LLC</fullName>
                </value>
                <value>
                    <fullName>Premier Physician Services</fullName>
                </value>
                <value>
                    <fullName>Questcare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ED_Status_Flag__c</fullName>
        <formula>IMAGE( CASE(  ED_Status_Ranking__c  , "Satisfied", "/img/samples/flag_green.gif", "Some Issues", "/img/samples/flag_yellow.gif", "At Risk", "/img/samples/flag_red.gif", "/s.gif"), "Status Flag")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Demonstrates the health of our relationship with this client for the ED Division.  Updated by changing the ED Status Report - Ranking picklist.</inlineHelpText>
        <label>ED Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Status_Ranking__c</fullName>
        <label>ED Status Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Some Issues</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ED_Status_Report_Current_Issues__c</fullName>
        <label>ED Status Report - Current Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ED_VExecutive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ED Executive</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Physician</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ED_Visits__c</fullName>
        <inlineHelpText>Annual number of Emergency Department visits</inlineHelpText>
        <label>ED Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED__c</fullName>
        <inlineHelpText>If this account IS an ED client, please select the correct product(s) or service(s).  If this account is NOT an ED client, please select prospect.</inlineHelpText>
        <label>ED</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ED Billing</fullName>
                </value>
                <value>
                    <fullName>ED Facility Coding</fullName>
                </value>
                <value>
                    <fullName>ED Hospitalist</fullName>
                </value>
                <value>
                    <fullName>ED Physician Billing &amp; Coding</fullName>
                </value>
                <value>
                    <fullName>ED Physician Coding</fullName>
                </value>
                <value>
                    <fullName>ED Urgent Care</fullName>
                </value>
                <value>
                    <fullName>ED Wound Care</fullName>
                </value>
                <value>
                    <fullName>Previous Client</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EHR_Integration_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>OBB Field used to indicate the the EHR Integration is Complete</inlineHelpText>
        <label>EHR Integration Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKG_Monitor__c</fullName>
        <label>EKG Monitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Philips</fullName>
                </value>
                <value>
                    <fullName>Physio</fullName>
                </value>
                <value>
                    <fullName>Zoll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMR_System__c</fullName>
        <label>EMR System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allscripts</fullName>
                </value>
                <value>
                    <fullName>Cerner</fullName>
                </value>
                <value>
                    <fullName>Epic</fullName>
                </value>
                <value>
                    <fullName>GE-Centricity</fullName>
                </value>
                <value>
                    <fullName>Meditech</fullName>
                </value>
                <value>
                    <fullName>MedHost</fullName>
                </value>
                <value>
                    <fullName>NextGen</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Annual_Revenue__c</fullName>
        <description>The internal annual budgeted revenue for all products and services under the EMS contract.</description>
        <inlineHelpText>The internal annual budgeted revenue for all products and services under the EMS contract.</inlineHelpText>
        <label>EMS Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMS_Assessment_Issues_Comments_Next_Step__c</fullName>
        <description>For any Client with a "Some Issues" or "At Risk" should provide a concise summary of issues/comments and/or next steps.</description>
        <inlineHelpText>For any Client with a "Some Issues" or "At Risk" should provide a concise summary of issues/comments and/or next steps.</inlineHelpText>
        <label>EMS Assessment Issues/Comments/Next Step</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Avg_Risk_Score__c</fullName>
        <formula>(VALUE(LEFT(TEXT( EMS_Product_Service_Satisfaction__c ),1)) +
 VALUE(LEFT(TEXT( EMS_Revenue_Risk__c ),1))+
 VALUE(LEFT(TEXT( EMS_Competitive_Bid_Risk__c ),1)) +
 VALUE(LEFT(TEXT( EMS_External_Mkt_or_Regulatory_Pressure__c ),1)) +
 IF(VALUE(LEFT(TEXT(EMS_NPS_Score__c),1))&gt;=1, VALUE(LEFT(TEXT(EMS_NPS_Score__c),1)),0)) / 
 IF(VALUE(LEFT(TEXT(EMS_NPS_Score__c),1))&gt;=1, 5,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Avg Risk Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMS_Client_Risk_Assessment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a EMS Client Risk Assessment is required.</description>
        <inlineHelpText>If checked, a EMS Client Risk Assessment is required.</inlineHelpText>
        <label>EMS Client Risk Assessment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMS_Client_Since__c</fullName>
        <label>EMS Client Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMS_Collection_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current collection agency used for delinquent EMS collections</description>
        <label>EMS - Collection Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (EMS - Collection Agency)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMS_Collection_Agreement__c</fullName>
        <label>EMS - Collection Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Client Contract</fullName>
                </value>
                <value>
                    <fullName>Subcontract with Intermedix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Competitive_Bid_Risk__c</fullName>
        <description>The chance of our client going out to bid for any products or services in the next 12 months.
1 = Low Risk
2 = Medium Risk
3 = High Risk</description>
        <inlineHelpText>The chance of our client going out to bid for any products or services in the next 12 months.
1 = Low Risk
2 = Medium Risk
3 = High Risk</inlineHelpText>
        <label>EMS Competitive Bid Risk</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EMS_Risk_Assessment_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1 = Low Risk</fullName>
                </value>
                <value>
                    <fullName>2 = Medium Risk</fullName>
                </value>
                <value>
                    <fullName>3 = High Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Competitor_Expire__c</fullName>
        <label>EMS Competitor Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMS_Current_Billing_Vendor__c</fullName>
        <label>EMS Current Billing Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS</fullName>
                </value>
                <value>
                    <fullName>911 Professional Billing</fullName>
                </value>
                <value>
                    <fullName>Absolute Ambulance Billing</fullName>
                </value>
                <value>
                    <fullName>Accordis/Apollo Health Street</fullName>
                </value>
                <value>
                    <fullName>Accumed</fullName>
                </value>
                <value>
                    <fullName>ACS State &amp; Local Solutions</fullName>
                </value>
                <value>
                    <fullName>Advanced Claims</fullName>
                </value>
                <value>
                    <fullName>Aeromedical Collections Services (ACS)</fullName>
                </value>
                <value>
                    <fullName>AmbCoach</fullName>
                </value>
                <value>
                    <fullName>Ambulance Information Management Solutions (AIM)</fullName>
                </value>
                <value>
                    <fullName>Ambulance Medical Billing (AMB)</fullName>
                </value>
                <value>
                    <fullName>Ambulance Reimbursement Systems (ARS)</fullName>
                </value>
                <value>
                    <fullName>Andres Medical Billing</fullName>
                </value>
                <value>
                    <fullName>Carolina Ambulance Billing (CAB)</fullName>
                </value>
                <value>
                    <fullName>Certified Ambulance Group</fullName>
                </value>
                <value>
                    <fullName>Coastal l Medical Billing</fullName>
                </value>
                <value>
                    <fullName>Coastline</fullName>
                </value>
                <value>
                    <fullName>Colleton Software</fullName>
                </value>
                <value>
                    <fullName>Comstar</fullName>
                </value>
                <value>
                    <fullName>Cornerstone</fullName>
                </value>
                <value>
                    <fullName>Cost Recovery Corporation (CRC)</fullName>
                </value>
                <value>
                    <fullName>Covenant Billing</fullName>
                </value>
                <value>
                    <fullName>Digitech</fullName>
                </value>
                <value>
                    <fullName>DM Medical</fullName>
                </value>
                <value>
                    <fullName>Dynamic Claim Management</fullName>
                </value>
                <value>
                    <fullName>EF Recovery</fullName>
                </value>
                <value>
                    <fullName>Emergicon</fullName>
                </value>
                <value>
                    <fullName>EMS Consultants</fullName>
                </value>
                <value>
                    <fullName>EMS Management &amp; Consultants</fullName>
                </value>
                <value>
                    <fullName>EMS Medical Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Customer_Risk_Status__c</fullName>
        <description>Green - Satisfied
Yellow - Some Issues
Red - At Risk</description>
        <inlineHelpText>Green - Satisfied
Yellow - Some Issues
Red - At Risk</inlineHelpText>
        <label>EMS Customer Risk Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                    <color>#009900</color>
                    <label>Satisfied</label>
                </value>
                <value>
                    <fullName>Some Issues</fullName>
                    <color>#FFCC33</color>
                    <label>Some Issues</label>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                    <color>#CC0000</color>
                    <label>At Risk</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Customer_Status_calc__c</fullName>
        <description>Not on page layout, but used to determine color of Sys Status Flag.
If SYS Risk Assessment is required, uses SYS Avg Risk Score; if not, uses value in SYS Customer Status field.</description>
        <formula>IF ( NOT(EMS_Risk_Assessment_Required__c),
CASE ( EMS_Customer_Risk_Status__c, "Satisfied", "Satisfied",
"Some Issues", "Some Issues",
"At Risk", "At Risk", NULL),
IF (EMS_Avg_Risk_Score__c &lt; 1.5, "Satisfied",
IF ( EMS_Avg_Risk_Score__c &lt;= 2.0, "Some Issues",
"At Risk")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not on page layout, but used to determine color of Sys Status Flag.
If SYS Risk Assessment is required, uses SYS Avg Risk Score; if not, uses value in SYS Customer Status field.</inlineHelpText>
        <label>EMS Customer Status (calc)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Customer__c</fullName>
        <description>Not on page layout, used to count EMS customers in reports</description>
        <formula>IF( NOT(INCLUDES(EMS__c, "Prospect")),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMS_DeptID__c</fullName>
        <label>EMS DeptID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_External_Mkt_or_Regulatory_Pressure__c</fullName>
        <description>1 = Low Pressure
2 = Medium Pressure
3 = High Pressure</description>
        <inlineHelpText>1 = Low Pressure
2 = Medium Pressure
3 = High Pressure</inlineHelpText>
        <label>EMS External Mkt or Regulatory Pressure</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EMS_Risk_Assessment_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1 = Low Pressure</fullName>
                </value>
                <value>
                    <fullName>2 = Medium Pressure</fullName>
                </value>
                <value>
                    <fullName>3 = High Pressure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_FOIA_d_Proposals__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, upload documents to chatter using FOIA as the keyword for searching capabilities</inlineHelpText>
        <label>EMS FOIA'd Proposals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMS_Last_Document_Review__c</fullName>
        <label>EMS Last Document Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMS_Last_Medicaid_Revalidation__c</fullName>
        <label>EMS Last Medicaid Revalidation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMS_Last_Medicare_Revalidation__c</fullName>
        <label>EMS Last Medicare Revalidation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMS_Last_Rate_Increase__c</fullName>
        <label>EMS Last Rate Increase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMS_List__c</fullName>
        <formula>OR(includes(Customer_Focus_Area__c,"EMS-ASPP"),includes(Customer_Focus_Area__c,"EMS-RCM"),includes(Customer_Focus_Area__c,"EMS-EPCR"),includes(Customer_Focus_Area__c,"EMS"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMS_Lobbyist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for the lobbyist contact</inlineHelpText>
        <label>EMS Lobbyist</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMS_NPS_Score__c</fullName>
        <description>How loyal are the key staff to Intermedix?
1 = Promoter - NPS Ranking 9/10
2 = Neutral - NPS Ranking 7/8
3 = Detractor - NPS Ranking 0-6</description>
        <inlineHelpText>How loyal are the key staff to Intermedix?
1 = Promoter - NPS Ranking 9/10
2 = Neutral - NPS Ranking 7/8
3 = Detractor - NPS Ranking 0-6</inlineHelpText>
        <label>EMS NPS Score</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EMS_Risk_Assessment_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1 = Promoter - NPS Ranking 9/10</fullName>
                </value>
                <value>
                    <fullName>2 = Neutral - NPS Ranking 7/8</fullName>
                </value>
                <value>
                    <fullName>3 = Detractor - NPS Ranking 0-6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Next_Medicaid_Revalidation__c</fullName>
        <formula>IF(
AND(
MONTH( EMS_Last_Medicaid_Revalidation__c ) = 2,
DAY( EMS_Last_Medicaid_Revalidation__c) = 29,
NOT(
OR(
MOD( YEAR( EMS_Last_Medicaid_Revalidation__c) + 1, 400 ) = 0,
AND(
MOD( YEAR( EMS_Last_Medicaid_Revalidation__c) + 1, 4 ) = 0,
MOD( YEAR( EMS_Last_Medicaid_Revalidation__c) + 1, 100 ) != 0
)
)
)
),
DATE( YEAR( EMS_Last_Medicaid_Revalidation__c) + 1, 3, 1),
DATE( YEAR( EMS_Last_Medicaid_Revalidation__c) + 1, MONTH( EMS_Last_Medicaid_Revalidation__c), DAY( EMS_Last_Medicaid_Revalidation__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Next Medicaid Revalidation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMS_Next_Medicare_Revalidation__c</fullName>
        <formula>IF(
AND(
    MONTH(  EMS_Last_Medicare_Revalidation__c  ) = 2,
    DAY( EMS_Last_Medicare_Revalidation__c) = 29,
    NOT(
        OR(
            MOD( YEAR( EMS_Last_Medicare_Revalidation__c) + 5, 400 ) = 0,
            AND(
                MOD( YEAR( EMS_Last_Medicare_Revalidation__c) + 5, 4 ) = 0,
                MOD( YEAR( EMS_Last_Medicare_Revalidation__c) + 5, 100 ) != 0
            )
        )
   )
),
DATE( YEAR( EMS_Last_Medicare_Revalidation__c) + 5, 3, 1),
DATE( YEAR( EMS_Last_Medicare_Revalidation__c) + 5, MONTH( EMS_Last_Medicare_Revalidation__c), DAY( EMS_Last_Medicare_Revalidation__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Next Medicare Revalidation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMS_Next_RFP_Renewal_Date__c</fullName>
        <label>EMS - Next RFP/Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMS_Notes__c</fullName>
        <label>EMS Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EMS_Organization_Type__c</fullName>
        <label>EMS Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>City Government</fullName>
                </value>
                <value>
                    <fullName>County Government</fullName>
                </value>
                <value>
                    <fullName>Fire Protection District</fullName>
                </value>
                <value>
                    <fullName>Hospital Based</fullName>
                </value>
                <value>
                    <fullName>Hospital District</fullName>
                </value>
                <value>
                    <fullName>Private Transport Agency</fullName>
                </value>
                <value>
                    <fullName>State Government</fullName>
                </value>
                <value>
                    <fullName>Township Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Performance_Statistics__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, upload documents to chatter using FOIA as the keyword for searching capabilities</inlineHelpText>
        <label>EMS Performance Statistics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMS_Physical_Location_City__c</fullName>
        <label>EMS Physical Location - City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Physical_Location_State__c</fullName>
        <label>EMS Physical Location - State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Physical_Location_Street__c</fullName>
        <label>EMS Physical Location - Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Physical_Location_Zip__c</fullName>
        <label>EMS Physical Location - Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Product_Service_Satisfaction__c</fullName>
        <description>How satisfied is the client with our actual products or services?
1 = Very Satisfied
2 = Somewhat Satisfied
3 = Not Satisfied</description>
        <inlineHelpText>How satisfied is the client with our actual products or services?
1 = Very Satisfied
2 = Somewhat Satisfied
3 = Not Satisfied</inlineHelpText>
        <label>EMS Product/Service Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EMS_Risk_Assessment_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1 = Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>2 = Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 = Not Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Regional_Office__c</fullName>
        <inlineHelpText>Select the office that processes the EMS transports for this specific client.</inlineHelpText>
        <label>EMS Regional Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>